--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ h6,
 .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #18d26e;;
   text-align: center;
   padding: 15px;
   font-weight: 600;
