--- a/css/scss/modal.css
+++ b/css/scss/modal.css
@@ -12,6 +12,21 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
   
+
+  .modalText {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 400px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
   /* Modal Content */
   .modal-content {
     background-color: #fefefe;
@@ -24,15 +39,15 @@
   
   
   /* The Close Button */
-  .close {
+  .close2 {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
   }
   
-  .close:hover,
-  .close:focus {
+  .close2:hover,
+  .close2:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
