--- a/css/scss/modal.css
+++ b/css/scss/modal.css
@@ -11,6 +11,20 @@
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
+
+  .modal2 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
   
 
   .modalText {
@@ -36,6 +50,16 @@
     width: 380px;
 
   }
+
+  .modal-content2 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 1px;
+    border: 1px solid #888;
+    width: 1330px;
+
+  }
+  
   
   
   /* The Close Button */
